--- a/Class One/main.html
+++ b/Class One/main.html
@@ -9,9 +9,10 @@
 <body>
     <div id="root">
     </div>
-
+    <!--React and ReactDOM are imported via CDN (Content Delivery Network) links-->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!--After the above two lines we can use React and ReactDOM in our project-->
 
     <script src = "index.js"></script>
 </body>
