--- a/Class One/Multiple Elements Append/main.html
+++ b/Class One/Multiple Elements Append/main.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="root">
-    </div>
+    <div id="root"></div>
     <!--React and ReactDOM are imported via CDN (Content Delivery Network) links-->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
